More CSS improvements

--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Days+One|VT323" rel="stylesheet">
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
@@ -19,11 +20,12 @@
 
     <div class="centered" id="panel">
         <div id="trademark"> 
-            Simon<span class="superscript">&reg;</span>
+            <h1>Simon<span class="superscript">&reg;</span></h1>
         </div> 
         <div id="middle-row"> 
             <div class="column" id="count-column"> 
                 <div id="led"> 
+                    8-
                 </div> 
                 <div class="label">
                     COUNT
