--- a/app/index.html
+++ b/app/index.html
@@ -41,9 +41,9 @@
                 </div>
             </div> 
             <div class="column" id="strict-column"> 
-                <div class="round-led" id="mode-led"> 
+                <div class="round-led round-led-off" v-bind:class="{ 'round-led-on': isStrict }" id="mode-led"> 
                 </div> 
-                <div class="round-button" id="strict-button"> 
+                <div class="round-button" v-on:click="stricten" id="strict-button"> 
                 </div> 
                 <div class="label">
                     STRICT
