--- a/app/index.html
+++ b/app/index.html
@@ -9,12 +9,12 @@
     <div id="main">
     <div class="centered" id="round-area">
         <div id="upper-half"> 
-            <quad sound-url="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3" id="top-l"></quad>
-            <quad sound-url="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3" id="top-r"></quad>
+            <quad qid="4" sound-url="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3" id="top-l"></quad>
+            <quad qid="3" sound-url="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3" id="top-r"></quad>
         </div> 
         <div id="lower-half"> 
-            <quad sound-url="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3" id="bot-l"></quad>
-            <quad sound-url="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3" id="bot-r"></quad>
+            <quad qid="2" sound-url="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3" id="bot-l"></quad>
+            <quad qid="1" sound-url="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3" id="bot-r"></quad>
         </div> 
     </div>
 
