--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
         <div id="middle-row"> 
             <div class="column" id="count-column"> 
                 <div id="led"> 
-                    8-
+                    {{countDisplay}}
                 </div> 
                 <div class="label">
                     COUNT
