--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
             <div class="column" id="start-column"> 
                 <div class="round-led"> 
                 </div> 
-                <div class="round-button" v-on:click="nextSeq" id="start-button"></div>
+                <div class="round-button" v-on:click="start" id="start-button"></div>
                 <div class="label">
                     START
                 </div>
